--- a/index.html
+++ b/index.html
@@ -15,21 +15,47 @@ html {
 }
 
 body {
+  /*
   background: url(logo.png);
+  background-repeat:no-repeat;
+  background-position: center center;
+  */
   background-color: #444;
   vertical-align: middle;
   align-items: center;
   text-align: center;
   font-family: Helvetica, sans-serif;
 }
+
 body, html {
   overflow-x: hidden;
+}
+
+.logo {
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     width: 500px;
+     margin-top: -250px; /* Half the height */
+     margin-left: -250px; /* Half the width */
+}
+
+.footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: inherit;;
+  text-align: center;
 }
 
 </style>
 </head>
 <body>
-  <img src="logo.png" width="400px"/>
-  <p>beyond insight</p>
+  <img src="logo.png" class="logo" alt="cognaitiv"/>
+  <div class="footer">
+    <p>&copy; 2017 cognaitiv</p>
+  </div>
 </body>
 </html>
